@@ -169,7 +169,7 @@ namespace Mono.TextEditor.Highlighting
 				SetSpan ();
 				SetTree ();
 				bool isNoKeyword = false;
-				bool isAfterSpan = false;
+//				bool isAfterSpan = false;
 				for (int i = offset; i < maxEnd; i++) {
 					char ch = doc.Buffer.GetCharAt (i);
 					if (curSpan != null && !String.IsNullOrEmpty (curSpan.End)) {
